--- a/3_FirstIMUPythonScript/Serial.ipynb
+++ b/3_FirstIMUPythonScript/Serial.ipynb
@@ -59,6 +59,10 @@
     "    line = ser.readline()\n",
     "    line = line.rstrip()\n",
     "    lines.append(line)"
+    "# Fermeture connection port série dans la foulée\n",
+    "ser.flush()\n",
+    "ser.close()\n",
+    "ser.is_open"
    ]
   },
   {
