--- a/3_FirstIMUPythonScript/Serial.ipynb
+++ b/3_FirstIMUPythonScript/Serial.ipynb
@@ -58,7 +58,7 @@
     "for i in range(0,500):\n",
     "    line = ser.readline()\n",
     "    line = line.rstrip()\n",
-    "    lines.append(line)"
+    "    lines.append(line)",
     "# Fermeture connection port série dans la foulée\n",
     "ser.flush()\n",
     "ser.close()\n",
